--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			
 
 			<div class="button">
-				<a href="/homework.html">домашка</a>
+				<a href="homework.html">домашка</a>
 			</div>
 		</footer>
 	</div>
