--- a/homework.html
+++ b/homework.html
@@ -72,7 +72,7 @@
 		<footer class="footer">
 			<div class="footer__text">гри не буде тут)) можливо потім</div>
 			<div class="button">
-				<a href="/index.html">повернутись</a>
+				<a href="index.html">повернутись</a>
 			</div>
 		</footer>
 	</div>
